--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
 - added g2_image function
 - added g2_control_pd.* files
 - g2_device_exist moved to user space (perl)
+- added g2_set_line_width support in GIF device 
 
 0.30 (23.10.1998)
 ================
