--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-g2 - graphic library (C) 1998 Lj. Milanovic, H. Wagner
+g2 - graphic library (C) 1999 Lj. Milanovic, H. Wagner
 
-Version 0.3x
+Version 0.40
 
 License Information
 ===================
