Added g2_query_pointer (mouse support) to g2 and g2_X11 physical device (of course, updated documentation)

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
 -added g2_spline_demo.c
 -changed LINKDLL into G2L in g2.h
 -removed some non ansi parts (e.g. // comments)
+-added query pointer for X11 (mouse)
 
 0.41a
 =====
