--- a/README
+++ b/README
@@ -1,17 +1,21 @@
 g2 - graphic library (C) 1999 Lj. Milanovic, H. Wagner
 
-Version 0.40
+Version 0.42
 
 License Information
 ===================
 
-This program is covered with GNU General Public License (GPL) and
-_not_ with GNU Library General Public License (LGPL)! It is allowed
-only for GPL programs to use (static/dynamic linkage or any other
-using of code) g2 library. If you want to develop a non GPL
-application and to use g2 please contact the authors.
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation; either
+version 2.1 of the License, or (at your option) any later version.
 
-see INSTALL for information on how to install g2 see the html
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+See INSTALL for information on how to install g2 see the html
 documentation in the doc/ subdirectory for a function reference
 
 What is g2 ? 
@@ -58,15 +62,18 @@ g2_plot---> | Virtual device: id |--------> X11:   g2_attach(id_X11,...
 
 If you don't need or like the concept of virtual devices, simply ignore it. 
 
+
 CONTACT
 =======
 
-You can contact the authors by e-mail:
+You can contact the authors and contributors by e-mail:
 
-ljubo@ap.univie.ac.at
-wagner@iap.tuwien.ac.at
+Ljubomir Milanovic 			ljubo@users.sourceforge.net
+Horst Wagner       			wagner@users.sourceforge.net
+Tijs Michels (spline implementation)	tijs@vimec.nl
 
 or visit g2 home page on:
 
-http://www.ap.univie.ac.at/users/ljubo/g2/g2.shtml
+http://g2.sourceforge.net/
+
 
