Minor change in e-mail address.

--- a/README
+++ b/README
@@ -66,11 +66,11 @@ If you don't need or like the concept of virtual devices, simply ignore it.
 CONTACT
 =======
 
-You can contact the authors and contributors by e-mail:
+You can contact the authors and contributors by e-mail (/ is @ and - is .):
 
-Ljubomir Milanovic 			ljubo@users.sourceforge.net
-Horst Wagner       			wagner@users.sourceforge.net
-Tijs Michels (spline implementation)	tijs@vimec.nl
+Ljubomir Milanovic 			ljubo/users-sourceforge-net
+Horst Wagner       			wagner/users-sourceforge-net
+Tijs Michels (spline implementation)	tijs/vimec-nl
 
 or visit g2 home page on:
 
