--- a/INSTALL
+++ b/INSTALL
@@ -18,7 +18,7 @@ UNIX
 
 4. Run 'make' 
 
-5. Run 'make install' or copy libg2.a and g2.h, g2_X11.h, g2_GIF.h, and
+5. Run 'make install' or copy libg2.a and g2.h, g2_X11.h, g2_gd.h, and
    g2_PS.h to the default locations for library and include files. 
 
 6. Optional: run 'make demo' to compile demo applications 
@@ -48,12 +48,12 @@ VMS
    directories
 
 
-GIF-SUPPORT
+PNG-SUPPORT
 -----------
 
 g2 needs to be linked to the free available gd library written by
-Thomas Boutell in order to create GIF files.  g2 is tested with
-version 1.3 of gd. gd is available at http://www.boutell.com/gd/ and
+Thomas Boutell in order to create PNG files.  g2 is tested with
+version 2.0.22 of gd. gd is available at http://www.boutell.com/gd/ and
 at numerous mirror sites.  Use a ftp search
 (e.g. http://ftpsearch.ntnu.no/) and search for "gd1.3.tar.gz" to find
 your nearest mirror site.
