--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 
 - native g2_image support
-- GIF: setlinedash 
+- gd: setlinedash 
 - finish xfig support
 - test (and add) Fortran interface on more platforms
 - new devices (e.g. PNG, JPG, etc.)
