--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.51
+====
+- g2_perl improvements (added GD device, added splines, removed GIF,
+retested, added simple README)
+
 0.50
 ====
 - removed GIF code
