--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@
   retested, added simple README)
 - added configurable logging
 - added some new configuration parameters and slightly changed
-  configuration naming schema in the g2_config.h
+  configuration naming convention (g2_config.h)
 
 0.50
 ====
