Added doxygen compatible source code comments.

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
 - added configurable logging
 - added some new configuration parameters and slightly changed
   configuration naming convention (g2_config.h)
+- added doxygen comments for automatic docu generation
 
 0.50
 ====
