--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -16,8 +16,6 @@ documentation in the doxygen format */
 
 \section licence License Notice
 
-Copyright (C) Ljubomir Milanovic & Horst Wagner.
-
 This library is free software; you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as
 published by the Free Software Foundation; either version 2.1 of the
@@ -30,6 +28,8 @@ Lesser General Public License along with this library; if not, write
 to the Free Software Foundation, Inc., 59 Temple Place, Suite 330,
 Boston, MA 02111-1307 USA *
 
+Copyright (C) 1998-2004 Ljubomir Milanovic & Horst Wagner.
+
 
 \section introduction Introduction
 
@@ -41,7 +41,7 @@ Boston, MA 02111-1307 USA *
     - Simple to use
     - Supports several types of output devices (currently X11,
       PostScript, devices supported by gd http://www.boutell.com/gd/
-      (PNG, JPEG) and MS Windows windows)
+      (PNG, JPEG), FIG (http://www.xfig.org) and MS Windows windows)
     - Concept allows easy implementation of new device types
     - Virtual devices allow to send output simultaneously to several devices
     - User definable coordinate system
@@ -56,7 +56,7 @@ g2 is a simple to use graphics library for 2D graphical applications
 written in Ansi-C. This library provides a comprehensive set of
 functions for simultaneous generation of graphical output on different
 types of devices. Presently, following devices are currently supported
-by g2: X11, gd (PNG and JPEG), PostScript (xfig is in developement).
+by g2: X11, gd (PNG and JPEG), PostScript and FIG (xfig).
 One major feature of the g2_library is the concept of virtual devices.
 An arbitrary number of physical devices (such as PostScript, or X11) can
 be grouped to create a so-called virtual device. Commands sent to such a
