Number of minor updates for 0.60 release (e.g. added FIG to g2_perl, docu update, improved version tagging, etc.)

--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -9,6 +9,15 @@ documentation in the doxygen format */
  * \defgroup interface g2 User Interface
  */
 
+/**
+ * \ingroup interface
+ * \defgroup physdev g2 Physical devices
+ *
+ * g2 physical devices are drivers for different output
+ * formats.
+ *
+ */
+
 
 
 /** \mainpage
