Fixed outdated e-mail address README

--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -304,7 +304,7 @@ You can contact the authors and contributors by e-mail (/ is @ and - is .):
 
 - Ljubomir Milanovic: 			ljubo/users-sourceforge-net
 - Horst Wagner:       			wagner/users-sourceforge-net
-- Tijs Michels (spline implementation):	tijs/vimec-nl
+- Tijs Michels (spline implementation):	tijs/users-sourceforge-net
 
 or visit g2 home page on: http://g2.sourceforge.net/
 
