--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -48,36 +48,38 @@ Copyright (C) 1998-2004 Ljubomir Milanovic & Horst Wagner.
 
     - 2D graphics library
     - Simple to use
-    - Supports several types of output devices (currently X11,
-      PostScript, devices supported by gd http://www.boutell.com/gd/
-      (PNG, JPEG), FIG (http://www.xfig.org) and MS Windows windows)
+    - Supports several types of output devices (currently X11, PostScript,
+      devices supported by <a href="http://www.boutell.com/gd">gd</a> (PNG,
+      JPEG), <a href="http://www.xfig.org">FIG</a> and MS Windows windows)
     - Concept allows easy implementation of new device types
     - Virtual devices allow to send output simultaneously to several devices
     - User definable coordinate system
     - Written in ANSI-C
     - Tested under Digital Unix, AIX, Linux, VMS and Windows NT
     - Perl support
+    - Python support
     - Fortran interface
 
 \subsubsection long Long version
 
 g2 is a simple to use graphics library for 2D graphical applications
-written in Ansi-C. This library provides a comprehensive set of
-functions for simultaneous generation of graphical output on different
-types of devices. Currently, the following devices are supported
-by g2: X11, gd (PNG and JPEG), PostScript and FIG (xfig).
-One major feature of the g2_library is the concept of virtual devices.
+written in Ansi-C. It provides a comprehensive set of functions for
+simultaneous generation of graphical output on different types of devices.
+Currently, the following devices are supported by g2:
+X11, PostScript, <a href="http://www.boutell.com/gd">gd</a> (PNG and JPEG),
+<a href="http://www.xfig.org">FIG</a> and MS Windows.
+One major feature of the g2 library is the concept of virtual devices.
 An arbitrary number of physical devices (such as PostScript or X11) can
 be grouped to create a so-called virtual device. Commands sent to such a
-virtual device are automatically issued to all attached physical
-devices. This allows for example simultaneous output to a PNG file and a
+virtual device are automatically issued to all attached physical devices.
+This allows for example simultaneous output to a PNG file and a
 PostScript file. A virtual device in turn can be attached to another
 virtual device, allowing to construct trees of devices.
 Virtual devices can also be useful when using different user-coordinate
 systems. E.g. one X11 window showing an overview of a graphical output,
-and a second window showing a zoom of a more detailed area of the
-graphic. Drawing in both windows is performed by one single command to
-the virtual device.
+and a second window showing a zoom of a more detailed area of the graphic.
+Drawing in both windows is performed by one single command to the
+virtual device.
 
 \code
                                    /-------> PNG:   g2_attach(id_PNG,..
@@ -97,11 +99,11 @@ If you don't need or like the concept of virtual devices, simply ignore it.
 
     * PNG and JPEG support
 
-    g2 uses the gd library by Thomas Boutell to generate PNG files. This
-    package is freeware (however not GPL) and can be downloaded at
+    g2 uses the gd library by Thomas Boutell to generate PNG and JPEG files.
+    This package is freeware (however, not GPL) and can be downloaded at
     http://www.boutell.com/gd/.
     Linux users might prefer to install a pre-compiled gd rpm package
-    which should be available at your local RedHat mirrorsite.
+    which should be available at your local RedHat mirror site.
     NT users should install the gd source package in a subdirectory
     named "gd" which should be located in the same directory as the g2
     subdirectory (but not in the g2 directory itself). Otherwise, file
@@ -113,51 +115,61 @@ If you don't need or like the concept of virtual devices, simply ignore it.
 \subsection installation Installation
 
 
-LINUX
+\subsubsection Linux
 
     -# Either install RPM packet with binaries, or compile as described
-      in the UNIX section
+      in the \ref Unix section
 
-UNIX
+\subsubsection Unix
 
-    -# Extract package with gzip -dc g2-xxxx.tar.gz | tar xvf -
-    -# Run './configure'
-    -# Optionally run 'make depend'
-    -# Run 'make'
-    -# Run 'make install' or copy libg2.a and g2.h, g2_X11.h, g2_gd.h,
-      and g2_PS.h to the default locations for library and include files
-    -# Optional: cd to demo directory and run 'make demo' to compile demo applications
+    -# Extract package with <tt>gzip -dc g2-xxxx.tar.gz | tar xvf -</tt>
+    -# Run <tt>./configure</tt>
+    -# Optionally run <tt>make depend</tt>
+    -# Run \c make
+    -# Run <tt>make install</tt>, or copy libg2.a/so and g2.h,
+      g2_X11.h, g2_PS.h, g2_gd.h and g2_FIG.h to the default locations for
+      library and include files
+    -# Optionally \c cd to demo directory and run \c make
 
-WINDOWS NT
+\subsubsection Windows Windows NT
 
     -# Extract package using either the .tar.gz or the .zip distribution
     -# MS Visual C++ users can build both library and demos with the
       supplied project file: g2.dsw (to obtain an icon and use menu
       functions, you must also build the g2res project in g2.dsw)
     -# Users of gcc or other commandline based compilers with make
-      support continue as in Unix example
+      support continue as in \ref Unix example
     -# It is also possible to compile g2 on winNT/95 using the free
-      cygwin32 library and a X-windows library for windows.
+      cygwin32 library and a X-windows library for Windows.
       Theoretically it should be possible to support both X-windows and
       native NT/95 windows at the same time.
 
-PERL (old instructions)
+\subsubsection Perl Perl (old instructions)
 
     -# Change to directory g2_perl
     -# Perform following steps
-          -# perl Makefile.PL
-          -# make
-          -# make test
-          -# make install
+          - <tt>perl Makefile.PL
+          - make
+          - make test
+          - make install</tt>
     -# See the \ref perl "Perl interface" section for more information
-    -# swig is also supported, more details are comming ...
 
-VMS
+\subsubsection Python
 
-  -# Try to extract either the tar.gz or the zip distribution (whatever
+    -# Make sure you have Python installed (note: SWIG is \b not needed)
+    -# Change to directory g2_python
+    -# Type
+          - on Linux: <tt>python setup.py install</tt> (you must be \b root)
+	  - on Windows: <tt>setup.py install</tt>
+    -# Optionally type <tt>python g2_test.py</tt> to test the build
+    -# See the \ref python "Python interface" section for more information
+
+\subsubsection VMS
+
+  -# Try to extract either the .tar.gz or the .zip distribution (whatever
     is easier for you)
-  -# Type mms to compile library (descrip.mms file is suplied)
-  -# Run mms in demo directory to compile demo applications
+  -# Type \c mms to compile library (descrip.mms file is supplied)
+  -# Run \c mms in demo directory to compile demo applications
 
 
 \subsection simple A simple example
@@ -180,21 +192,21 @@ main()
 
 - Always include <g2.h>. Additionally include header files for all
 types of devices you want to use.
-- Open devices using g2_open_XY functions. The open function
-returns a device id of type int, which you need to refer to the device.
+- Open devices using g2_open_XY functions.\n
+The open function returns a device id of type int, which you need to refer to
+the device.
 - Call g2_close() to close device.
 - Consider turning off auto flush (g2_set_auto_flush()) for improved performance.
  
 
 You want to draw a PNG file instead of a PostScript file ?
-
-replace the PS header file with
+Replace the PS header file with
 
 \code
 #include <g2_gd.h>
 \endcode
 
-and replace the g2_open_PS function call with
+and replace the  call to g2_open_PS() with
 
 \code
 id = g2_open_gd("rect.png", 300, 200, g2_gd_png);
@@ -203,11 +215,11 @@ id = g2_open_gd("rect.png", 300, 200, g2_gd_png);
 You want to draw to a PNG file and a PostScript file with one plot
 command ?
 
-Here we use the concept of virtual devices. Open a PNG and PostScript
+Here we use the concept of virtual devices. Open a PNG and a PostScript
 device, then open a virtual device and attach both the PNG and
 PostScript device to the virtual device. Plot commands to the virtual
-device will be issued to both PNG and PostScript device. You can attach
-and detatch further devices at any time.
+device will be issued to both the PNG and the PostScript device. You can attach
+and detach further devices at any time.
 
 \code
 #include <g2.h>
@@ -238,20 +250,20 @@ Note: closing a virtual device automatically closes all attached devices.
 \subsubsection more More examples
 
 More examples showing the usage of different user coordinate systems,
-multiple virtual devices, etc. can be found in the distribution (demo
+multiple virtual devices, splines, etc. can be found in the distribution (demo
 directory).
 
     
 \subsection fortran Fortran interface
 
-The Fortran interface for g2 is currently tested for Linux and Digital
+The Fortran interface for g2 has currently been tested on Linux and Digital
 Unix/OSF. Function names for Fortran are the same as in C, however
-following differences exist:
+the following differences exist:
 
-  -# All variables, including device IDs, are of type REAL
-  -# Void functions are implemented as subroutines and must be called
-    with CALL
-  -# Constants defined by #define in C (e.g. g2_A4) do not work. Get
+  - All variables, including device IDs, are of type \c REAL
+  - Void functions are implemented as subroutines and must be called
+   with \c CALL
+  - Constants defined by \c \#define in C (e.g. \ref g2_A4) do not work. Get
     corresponding values from the appropriate header files.
 
 A short Fortran example:
@@ -274,11 +286,10 @@ A short Fortran example:
 
 \subsection perl Perl interface (old info)
 
-The perl interface for g2 is currently tested for Linux and Digital
-Unix/OSF. Function names in perl are the same as in C, however the
-device itself is implemented object orientated, i.e. the device argument
-is omitted in all functions.
-E.g., following simple perl script:
+The Perl interface for g2 has currently been tested on Linux and Digital
+Unix/OSF. Function names in Perl are the same as in C, however the
+device itself is implemented object oriented, i.e. the device argument
+is omitted in all functions. Cf. the following simple Perl script:
 
 \code
 use G2;
@@ -293,20 +304,69 @@ getc(STDIN);
 $d->close()
 \endcode
 
-The creator functions are newX11, newGIF, newPS, etc. and accept the
+The creator functions are \c newX11, \c newGIF, \c newPS, etc. and accept the
 same arguments as the open functions in the C version.
-See the perl documentation (perldoc G2) for more details and the test.pl
-script for a more extensive example.
+See the Perl documentation (<tt>perldoc G2</tt>) for more details
+and the test.pl script for a more extensive example.
+
+\subsection python Python interface
+
+Function names in Python are the same as in C, however the
+device itself is implemented object oriented, i.e. the device argument
+is omitted in all methods.
+An object is instantiated with one of the \c g2_open_ functions.
+Here is a simple Python script:
+
+\code
+import sys
+from g2 import *
+X11 = g2_open_X11(822, 575)
+PS = g2_open_PS('foo.ps', g2_A4, g2_PS_land)
+graph = g2_open_vd()
+graph.g2_attach(X11)
+graph.g2_attach(PS)
+graph.g2_line(30, 30, 90, 90)
+graph.g2_circle(60, 60, 30)
+X11.g2_pen(X11.g2_ink(.75, .2, 0))
+graph.g2_polygon([60, 30, 30, 60, 60, 90, 90, 60])
+graph.g2_set_dash([20, 12])
+sqrts = [100, 100, 225, 150, 400, 200, 625, 250]
+graph.g2_poly_line(sqrts)
+graph.g2_image(640, 252, [[2, 4, 6],[3, 6, 9],[4, 8, 12]])
+graph.g2_flush()
+print 'Done.\n[Enter]'
+sys.stdin.read(1)
+graph.g2_close()
+\endcode
+
+In C, many functions expect a pointer to a buffer of <tt>double</tt>'s and an
+\c int stating the number of points in this buffer.
+In Python, these functions are passed just a list of <tt>float</tt>s.
+You need not specify the number of points: Python knows the length of the
+list.
+
+Full documentation, including sample code, is available from the interactive
+Python prompt:
+
+\code
+$ python
+>>> import g2
+>>> help(g2)
+\endcode
+
+Here functions with a Python specific form (e.g. g2_query_pointer()) are marked
+as such.
 
 \section Contact
 
 You can contact the authors and contributors by e-mail (/ is @ and - is .):
 
-- Ljubomir Milanovic: 			ljubo/users-sourceforge-net
-- Horst Wagner:       			wagner/users-sourceforge-net
-- Tijs Michels (spline implementation):	tijs/users-sourceforge-net
+- Ljubomir Milanovic: 		ljubo/users-sourceforge-net
+- Horst Wagner:       		wagner/users-sourceforge-net
+- Tijs Michels (\ref splines "spline" implementation and \ref python "Python"
+wrapper):			tijs/users-sourceforge-net
 
-or visit g2 home page on: http://g2.sourceforge.net/
+or visit the g2 home page on: http://g2.sourceforge.net/
 
 */
 
@@ -315,7 +375,7 @@ or visit g2 home page on: http://g2.sourceforge.net/
 /** \page paper  PS paper sizes
 
 
-\subsection paper PostScript paper sizes
+\section paper PostScript paper sizes
 
 \code
 g2 Name                 Name                 Size(Pt)
