--- a/g2_python/README
+++ b/g2_python/README
@@ -1,14 +1,16 @@
-
-To build python module:
+To build the g2 Python module:
 	1. go to parent directory and build g2 library
-	2. type
+	2. type:
 		make
 
-To test pythone type:
+To test the g2 Python module, type:
 
 	make demo
 
-To install python g2 module type (you will need root priviledge):
+To install the g2 Python module, type (you will need root privilege):
 
 	make install
 
+Help is available. In a Python shell, type:
+	>>> import g2
+	>>> help(g2)
