--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -123,6 +123,7 @@ If you don't need or like the concept of virtual devices, simply ignore it.
 \subsubsection Unix
 
     -# Extract package with <tt>gzip -dc g2-xxxx.tar.gz | tar xvf -</tt>
+    -# Optionally run <tt>autoconf</tt>
     -# Run <tt>./configure</tt>
     -# Optionally run <tt>make depend</tt>
     -# Run \c make
