--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -337,9 +337,9 @@ graph.g2_attach(PS)
 graph.g2_line(30, 30, 90, 90)
 graph.g2_circle(60, 60, 30)
 X11.g2_pen(X11.g2_ink(.75, .2, 0))
-graph.g2_polygon([60, 30, 30, 60, 60, 90, 90, 60])
-graph.g2_set_dash([20, 12])
-sqrts = [100, 100, 225, 150, 400, 200, 625, 250]
+graph.g2_polygon((60, 30, 30, 60, 60, 90, 90, 60))
+graph.g2_set_dash((20, 12))
+sqrts = 100, 100, 225, 150, 400, 200, 625, 250
 graph.g2_poly_line(sqrts)
 graph.g2_image(640, 252, [[2, 4, 6],[3, 6, 9],[4, 8, 12]])
 graph.g2_flush()
@@ -350,9 +350,9 @@ graph.g2_close()
 
 In C, many functions expect a pointer to a buffer of <tt>double</tt>'s and an
 \c int stating the number of points in this buffer.
-In Python, these functions are passed just a list of <tt>float</tt>s.
+In Python, these functions are passed just a list or tuple of <tt>float</tt>s.
 You need not specify the number of points: Python knows the length of the
-list.
+list or tuple.
 
 Full documentation, including sample code, is available from the interactive
 Python prompt:
