--- a/doc/g2_main.dox
+++ b/doc/g2_main.dox
@@ -44,21 +44,28 @@ Copyright (C) 1998-2014 Ljubomir Milanovic & Horst Wagner.
 
 \subsection what What is g2 ?
 
-\subsubsection short Short version (if you are in hurry)
+\subsubsection veryshort Very short version (if you are in hurry)
+Easy to use 2D graphical library.
+\code
+	w = g2_open_X11(100, 100);
+	g2_plot(w, 10, 10);
+\endcode
 
-    - 2D graphics library
-    - Simple to use
-    - Supports several types of output devices (currently X11, PostScript,
-      devices supported by <a href="http://www.boutell.com/gd">gd</a> (PNG,
-      JPEG), <a href="http://www.xfig.org">FIG</a> and MS Windows windows)
-    - Concept allows easy implementation of new device types
-    - Virtual devices allow to send output simultaneously to several devices
-    - User definable coordinate system
-    - Written in ANSI-C
-    - Tested under Digital Unix, AIX, Linux, VMS and Windows NT
-    - Perl support
-    - Python support
-    - Fortran interface
+\subsubsection short Short version (if you have a bit of time)
+
+- 2D graphics library
+- Simple to use
+- Supports several types of output devices (currently X11, PostScript,
+  devices supported by [gd](http://www.boutell.com/gd) (PNG,
+  JPEG), <a href="http://www.xfig.org">FIG</a> and MS Windows windows)
+- Concept allows easy implementation of new device types
+- Virtual devices allow to send output simultaneously to several devices
+- User definable coordinate system
+- Written in ANSI-C
+- Tested under Digital Unix, AIX, Linux, VMS and Windows NT
+- Perl support
+- Python support
+- Fortran interface
 
 \subsubsection long Long version
 
@@ -67,7 +74,7 @@ written in Ansi-C. It provides a comprehensive set of functions for
 simultaneous generation of graphical output on different types of devices.
 Currently, the following devices are supported by g2:
 X11, PostScript, <a href="http://www.boutell.com/gd">gd</a> (PNG and JPEG),
-<a href="http://www.xfig.org">FIG</a> and MS Windows.
+<a href="http://www.xfig.org">FIG</a> and MS Windows.
 One major feature of the g2 library is the concept of virtual devices.
 An arbitrary number of physical devices (such as PostScript or X11) can
 be grouped to create a so-called virtual device. Commands sent to such a
@@ -97,19 +104,19 @@ If you don't need or like the concept of virtual devices, simply ignore it.
 
 \subsection preinstallation Preinstallation tasks:
 
-    * PNG and JPEG support
+* PNG and JPEG support
 
-    g2 uses the gd library by Thomas Boutell to generate PNG and JPEG files.
-    This package is freeware (however, not GPL) and can be downloaded at
-    http://www.boutell.com/gd/.
-    Linux users might prefer to install a pre-compiled gd rpm package
-    which should be available at your local RedHat mirror site.
-    NT users should install the gd source package in a subdirectory
-    named "gd" which should be located in the same directory as the g2
-    subdirectory (but not in the g2 directory itself). Otherwise, file
-    locations for gd must be modified in the g2 project workspace.
-    Unix and VMS users will have to build and install gd according to
-    the instructions found in the gd distribution.
+g2 uses the gd library by Thomas Boutell to generate PNG and JPEG files.
+This package is freeware (however, not GPL) and can be downloaded at
+http://www.boutell.com/gd/.
+Linux users might prefer to install a pre-compiled gd rpm package
+which should be available at your local RedHat mirror site.
+NT users should install the gd source package in a subdirectory
+named "gd" which should be located in the same directory as the g2
+subdirectory (but not in the g2 directory itself). Otherwise, file
+locations for gd must be modified in the g2 project workspace.
+Unix and VMS users will have to build and install gd according to
+the instructions found in the gd distribution.
 
 
 \subsection installation Installation
@@ -117,68 +124,68 @@ If you don't need or like the concept of virtual devices, simply ignore it.
 
 \subsubsection Linux
 
-    -# Either install RPM packet with binaries, or compile as described
-      in the \ref Unix section
+-# Either install RPM packet with binaries, or compile as described
+   in the \ref Unix section
 
 \subsubsection Unix
 
-    -# Extract package with <tt>gzip -dc g2-xxxx.tar.gz | tar xvf -</tt>
-    -# Optionally run <tt>autoconf -f</tt>
-    -# Run <tt>./configure</tt>
-    -# Optionally run <tt>make depend</tt>
-    -# Run \c make
-    -# Run <tt>make install</tt>, or copy libg2.a/so and g2.h,
-      g2_X11.h, g2_PS.h, g2_gd.h and g2_FIG.h to the default locations for
-      library and include files
-    -# Optionally \c cd to demo directory and run \c make
+-# Extract package with <tt>gzip -dc g2-xxxx.tar.gz | tar xvf -</tt>
+-# Optionally run <tt>autoconf -f</tt>
+-# Run <tt>./configure</tt>
+-# Optionally run <tt>make depend</tt>
+-# Run \c make
+-# Run <tt>make install</tt>, or copy libg2.a/so and g2.h,
+   g2_X11.h, g2_PS.h, g2_gd.h and g2_FIG.h to the default locations for
+   library and include files
+-# Optionally \c cd to demo directory and run \c make
 
 \subsubsection Windows Windows NT
 
-    -# Extract package using either the .tar.gz or the .zip distribution
-    -# MS Visual C++ users can build both library and demos with the
-      supplied project file: g2.dsw (to obtain an icon and use menu
-      functions, you must also build the g2res project in g2.dsw)
-    -# Users of gcc or other commandline based compilers with make
-      support continue as in \ref Unix example
-    -# It is also possible to compile g2 on winNT/95 using the free
-      cygwin32 library and a X-windows library for Windows.
-      Theoretically it should be possible to support both X-windows and
-      native NT/95 windows at the same time.
+-# Extract package using either the .tar.gz or the .zip distribution
+-# MS Visual C++ users can build both library and demos with the
+  supplied project file: g2.dsw (to obtain an icon and use menu
+  functions, you must also build the g2res project in g2.dsw)
+-# Users of gcc or other commandline based compilers with make
+  support continue as in \ref Unix example
+-# It is also possible to compile g2 on winNT/95 using the free
+  cygwin32 library and a X-windows library for Windows.
+  Theoretically it should be possible to support both X-windows and
+  native NT/95 windows at the same time.
 
 \subsubsection Perl Perl (old instructions)
 
-    -# Change to directory g2_perl
-    -# Perform following steps
-          - <tt>perl Makefile.PL
-          - make
-          - make test
-          - make install</tt>
-    -# See the \ref perl "Perl interface" section for more information
+-# Change to directory g2_perl
+-# Perform following steps
+      - <tt>perl Makefile.PL
+      - make
+      - make test
+      - make install</tt>
+-# See the \ref perl "Perl interface" section for more information
 
 \subsubsection Python
 
-    -# Make sure you have Python installed (note: SWIG is \b not needed)
-    -# Build g2 as described above (see \ref installation)
-    -# Change to directory g2_python
-    -# Type
+-# Make sure you have Python installed (note: SWIG is \b not needed)
+-# Build g2 as described above (see \ref installation)
+-# Change to directory g2_python
+-# Type
 	- on Linux:    
 	  - <tt>make</tt> to build g2 Python module
 	  - <tt>make demo</tt> to test g2 Python module
 	  - <tt>make install</tt> to install g2 Python module (you must be \b root)
 	- on Windows (you need Visual Studio when using the standard Python release for Windows):
 	  - <tt>setup.py "compile options" "link options" install</tt>
-    -# If you link your g2 Python module against <tt>libg2.so</tt>, and you are
-       unwilling or unable to do an install, you need to tell the g2 Python module
-       where to look for it, either with <tt>ldconfig</tt>, or with the
-       <tt>LD_LIBRARY_PATH</tt> environment variable
-    -# See the \ref python "Python interface" section for more information
+-# If you link your g2 Python module against <tt>libg2.so</tt>, and you are
+   unwilling or unable to do an install, you need to tell the g2 Python module
+   where to look for it, either with <tt>ldconfig</tt>, or with the
+   <tt>LD_LIBRARY_PATH</tt> environment variable
+-# See the \ref python "Python interface" section for more information
 
 \subsubsection VMS
 
-  -# Try to extract either the .tar.gz or the .zip distribution (whatever
-    is easier for you)
-  -# Type \c mms to compile library (descrip.mms file is supplied)
-  -# Run \c mms in demo directory to compile demo applications
+-# Try to extract either the .tar.gz or the .zip distribution (whatever
+  is easier for you)
+-# Type \c mms to compile library (descrip.mms file is supplied)
+-# Run \c mms in demo directory to compile demo applications
 
 
 \subsection simple A simple example
@@ -269,11 +276,11 @@ The Fortran interface for g2 has currently been tested on Linux and Digital
 Unix/OSF. Function names for Fortran are the same as in C, however
 the following differences exist:
 
-  - All variables, including device IDs, are of type \c REAL
-  - Void functions are implemented as subroutines and must be called
-   with \c CALL
-  - Constants defined by \c \#define in C (e.g. \ref g2_A4) do not work. Get
-    corresponding values from the appropriate header files.
+- All variables, including device IDs, are of type \c REAL
+- Void functions are implemented as subroutines and must be called
+  with \c CALL
+- Constants defined by \c \#define in C (e.g. \ref g2_A4) do not work. Get
+  corresponding values from the appropriate header files.
 
 A short Fortran example:
 
